--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>E-commerce</title>
+    <title>Home</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
@@ -15,7 +15,7 @@
         <div>
           <a href="index.html"><i class="bx bx-home-smile logo"></i></a>
           <a href="shop.html"><i class="bx bx-shopping-bag logo"></i></a>
-          <a href="index.html"><i class="bx bx-cart logo"></i></a>
+          <a href="cart.html"><i class="bx bx-cart logo"></i></a>
         </div>
       </div>
 
