--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Products</title>
+    <title>Cart</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
@@ -19,12 +19,8 @@
       </div>
     </div>
 
-    <div style="text-align: center">
-      <input class="search_item" type="text" placeholder="Search" />
-    </div>
+    <div class="cartBox"></div>
 
-    <div class="container2"></div>
-
-    <script src="shop.js"></script>
+    <script src="cart.js"></script>
   </body>
 </html>
