--- a/frontend/public/shop.html
+++ b/frontend/public/shop.html
@@ -12,10 +12,13 @@
     <!-- Header -->
     <div class="header">
       <div><h1 class="shopName">KAIRA</h1></div>
-      <div>
+      <div style="display: flex">
         <a href="index.html"><i class="bx bx-home-smile logo"></i></a>
         <a href="shop.html"><i class="bx bx-shopping-bag logo"></i></a>
-        <a href="cart.html"><i class="bx bx-cart logo"></i></a>
+        <div style="position: relative">
+          <a href="cart.html"><i class="bx bx-cart logo"></i></a>
+          <div class="haveCartItem"></div>
+        </div>
       </div>
     </div>
 
